<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/map_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/choice_settings_b"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/baseline_settings_white_36"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/choice_map_f"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="960px"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_toolbar"
        tools:context=".ChoiceActivity"
        tools:layout="@layout/placeholder_map" />

    <TextView
        android:id="@+id/radius_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_map_f" />

    <EditText
        android:id="@+id/radius_et"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:gravity="end"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:labelFor="@string/radius_label"
        app:layout_constraintEnd_toStartOf="@+id/kilometers_tv"
        app:layout_constraintTop_toBottomOf="@+id/choice_map_f"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/go_b"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_cloud_download_black_18"
        android:text="@string/get_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/date_tv" />

    <Button
        android:id="@+id/my_location_b"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_location_searching_black_18"
        android:text="@string/my_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_dp" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius_tv" />

    <TextView
        android:id="@+id/date_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/date_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/date_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/kilometers_tv"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/km"
        app:layout_constraintBottom_toBottomOf="@+id/radius_et"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>