<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/settings_back_b"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/baseline_keyboard_arrow_left_white_36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/settings_desc"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/weather_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/weather_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <TextView
        android:id="@+id/temperature_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_type_tv" />

    <TextView
        android:id="@+id/wind_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_tv" />

    <Button
        android:id="@+id/save_settings_b"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_save_black_18"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/weather_type_sp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:entries="@array/weather_types"
        app:layout_constraintBottom_toBottomOf="@+id/weather_type_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/wind_sp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:entries="@array/winds"
        app:layout_constraintBottom_toBottomOf="@+id/wind_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/temperature_et"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:gravity="end"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        android:labelFor="@string/temperature_label"
        app:layout_constraintBottom_toBottomOf="@+id/temperature_tv"
        app:layout_constraintEnd_toStartOf="@+id/celsius_tv"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/wind_direction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/wind_direction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_tv" />

    <Spinner
        android:id="@+id/wind_direction_sp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:clickable="false"
        android:entries="@array/wind_directions"
        app:layout_constraintBottom_toBottomOf="@+id/wind_direction_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/celsius_tv"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/celsius_symbol"
        app:layout_constraintBottom_toBottomOf="@+id/temperature_et"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/atmospheric_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/atmospheric_explanation"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/weather_type_sp"
        app:layout_constraintTop_toBottomOf="@+id/weather_type_sp" />

</android.support.constraint.ConstraintLayout>